20250415 物件驗證器 使用反射 By Timmy
